--- a/public/latest/assets/admin-css/student-dash.css
+++ b/public/latest/assets/admin-css/student-dash.css
@@ -1023,7 +1023,7 @@
   margin-right: 1rem;
 }
 .course-status-wrap table tr td .media .avatar img {
-  width: 0.2em 0.4rem;
+  width: 2.4rem;
   height: 2.4rem;
   -o-object-fit: cover;
      object-fit: cover;
