--- a/public/latest/assets/admin-css/dashboard.css
+++ b/public/latest/assets/admin-css/dashboard.css
@@ -89,6 +89,7 @@ main .container-fluid {
   background: var(--background-light-paper, #FFF);
   box-shadow: 0px 12px 24px -4px rgba(145, 158, 171, 0.12), 0px 0px 2px 0px rgba(145, 158, 171, 0.2);
   padding: 1rem 1.5rem;
+  min-height: 95%;
 }
 .top-performing-course .d-flex {
   align-items: center;
