--- a/scss/dashboard.scss
+++ b/scss/dashboard.scss
@@ -101,6 +101,7 @@ main {
     background: var(--background-light-paper, #FFF);
     box-shadow: 0px 12px 24px -4px rgba(145, 158, 171, 0.12), 0px 0px 2px 0px rgba(145, 158, 171, 0.20);
     padding: 1rem 1.5rem;
+    min-height: 95%;
 
     .d-flex {
         align-items: center;
