--- a/scss/header.scss
+++ b/scss/header.scss
@@ -41,6 +41,8 @@
     .navbar-brand {
         img {
             max-width: 8.5rem;
+            max-height: 3rem;
+            object-fit: cover;
         }
     }
 
