--- a/scss/student-dash.scss
+++ b/scss/student-dash.scss
@@ -1155,7 +1155,7 @@
                         margin-right: 1rem;
 
                         img {
-                            width: 0.2em 0.4rem;
+                            width: 2.4rem;
                             height: 2.4rem;
                             object-fit: cover;
                             border-radius: 50%;
