--- a/public/latest/assets/admin-css/student-dash.css
+++ b/public/latest/assets/admin-css/student-dash.css
@@ -961,6 +961,7 @@
   border-radius: 0.5rem;
   background: var(--background-light-paper, #FFF);
   box-shadow: 0px 12px 24px -4px rgba(145, 158, 171, 0.12), 0px 0px 2px 0px rgba(145, 158, 171, 0.2);
+  min-height: 95%;
 }
 .course-status-wrap .d-flex {
   align-items: center;
