--- a/scss/user.scss
+++ b/scss/user.scss
@@ -6,7 +6,7 @@
 
 .user-title-box {
     @include m.df(space-between);
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 
     h1 {
         color: var(--neutral-color-neutral-70, #2F3A4C);
@@ -20,6 +20,33 @@
         }
     }
 
+    button,
+    a {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        color: #FFF;
+        font-size: 0.875rem;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1.5rem;
+        padding: 0.75rem 1.5rem;
+        border-radius: 0.375rem;
+        background: var(--primary-color-blue, #294CFF);
+        transition: all linear .3s;
+
+        img {
+            margin-right: 0.2rem;
+        }
+
+        &:hover {
+            background-color: #2F3A4C;
+        }
+    }
+}
+
+
+.user-add-box{
     button,
     a {
         display: inline-flex;
@@ -657,10 +684,7 @@
 }
 
 .user-search-box-wrap {
-    display: grid;
-    grid-template-columns: 65% 19% 16%;
-    // grid-gap: 1.19rem;
-
+    margin-bottom: 2rem;
     .form-group {
         position: relative;
 
@@ -2092,6 +2116,15 @@
     .user-header-bttn{
         text-align: left;
     }
+
+    .user-add-box{
+        text-align: left!important;
+        margin-bottom: 1rem;
+    }
+
+    .user-search-box-wrap{
+        margin-bottom: 1rem;
+    } 
 }
 
 // landscape phone device 
@@ -2177,6 +2210,15 @@
     .header-action .dropdown-menu {
         transform: translate3d(39.4px, -26.6px, 0px) !important;
     }
+
+    .user-add-box{
+        text-align: left!important;
+        margin-bottom: 1rem;
+    }
+
+    .user-search-box-wrap{
+        margin-bottom: 1rem;
+    }
 }
 
 // tablet device 
@@ -2215,6 +2257,15 @@
     .user-search-box-wrap{
         grid-template-columns: 100%!important;
     }
+
+    .user-add-box{
+        text-align: left!important;
+        margin-bottom: 1rem;
+    }
+
+    .user-search-box-wrap{
+        margin-bottom: 1rem;
+    }
 }
 
 // landtablet device 
@@ -2222,6 +2273,14 @@
 
     .user-search-box-wrap{
         grid-template-columns: 85% 15%!important;
+    }
+
+    .user-add-box button, .user-add-box a{
+        font-size: .8rem;
+    }
+
+    .user-add-box{
+        margin-bottom: 1rem;
     }
 }
 
