--- a/scss/user.scss
+++ b/scss/user.scss
@@ -286,6 +286,7 @@
     border: 1px solid var(--neutral-40, #E0E0E0);
     background: var(--neutral-10, #FFF);
     padding: 1.5rem;
+    overflow-x: hidden;
 
     h4 {
         color: var(--neutral-90, #252525);
