--- a/scss/ins-dashboard.scss
+++ b/scss/ins-dashboard.scss
@@ -97,6 +97,7 @@
     background: #FFF;
     box-shadow: 0px 12px 24px -4px rgba(145, 158, 171, 0.12), 0px 0px 2px 0px rgba(145, 158, 171, 0.20);
     padding: 1.5rem;
+    min-height: 91.5%; 
 
     h3 {
         color: var(--text-light-primary, #212B36);
@@ -160,6 +161,15 @@
     background: #FFF;
     box-shadow: 0px 12px 24px -4px rgba(145, 158, 171, 0.12), 0px 0px 2px 0px rgba(145, 158, 171, 0.20);
     padding: 1.5rem;
+    min-height: 91.5%;
+    position: relative;
+
+    .text-center{
+        position: absolute;
+        left: 0;
+        bottom: 1rem;
+        width: 100%;
+    }
 
     h3 {
         color: var(--text-light-primary, #212B36);
@@ -218,6 +228,15 @@
     background: var(--neutral-white, #FFF);
     box-shadow: 0px 1px 2px 0px rgba(145, 158, 171, 0.16);
     padding: 1.5rem 1.125rem;
+    min-height: 95%;
+    position: relative;
+    
+    #course_earning{
+        position: absolute;
+        left: 0;
+        top: 30%;
+        width: 100%;
+    }
 
     h5 {
         color: var(--neutral-black-black-500, #1D1F2C);
