--- a/scss/header.scss
+++ b/scss/header.scss
@@ -131,6 +131,10 @@
     .d-flex {
         align-items: center;
 
+        .dark-mode-bttn-area{
+            margin-right: 1rem;
+        }
+
         a.bttn {
             border-radius: 0.75rem;
             border: 1px solid var(--neutral-color-neutral-30, #E5ECF6);
