--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,13 @@
     width: 100%;
 }
 
+.ligth-ele{
+    display: block!important;
+}
+.dark-ele{
+    display: none!important;
+}
+
 .common-bttn {
     border-radius: 0.375rem;
     background: var(--primary-color-blue, #294CFF);
